--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button-scroll-top {
+    @apply fixed bottom-[10px] right-[20px] p-3 rounded-full bg-blue-300 text-white hover:bg-blue-500
+    focus:outline-none hover:ring-2 hover:ring-offset-2 hover:ring-blue-500 hover:ring-opacity-60 transition
+    ease-in-out duration-300 ;
+}
